webapp/react-src/src/components/OperationDetail/StackDetail/StackDetail.scss
/**
 * StackDetail.scss
 *
 * SASS styles for the Stack Detail component
 *
 * Notes:
 * 
 * - Uses the limited [`field-sizing` property](https://developer.mozilla.org/en-US/docs/Web/CSS/field-sizing) to
 *   control the width of input fields, which is unsupported in Firefox and Safari.
 *
 * - The form inputs are instances of ColumnView's Stack layout with most styles defined in
 *   src/components/ColumnView/Layouts/CellLayou.scss. It is necessary to define pointer-events
 *   for those `input` elements at the form level using the `:focus-within` psuedo-element. I 
 *   do it this way in lieu of disabled attributes, e.g. `<input disabled>`, in order to change
 *   the focus between cells but within column index of a stack operation.
 */
@use "sass:math";
@use "../../../styles/variables.scss" as *;

$enabledCellColor: #555;
$enabledCellOutlineColor: #aaa;
$enabledCellBackgroundColor: #f9f9f9;
$enabledCellFontWeight: 500;

// lightens enabled variables to signify hover/unhover state
$unhoverLightenFactor: 25%;

$hoveredCellColor: $enabledCellColor;
$hoveredCellOutlineColor: $enabledCellOutlineColor;
$hoveredCellBackgroundColor: $enabledCellBackgroundColor;
$hoveredCellFontWeight: $enabledCellFontWeight;
$hoveredCellDropShadowColor: #ddd;

$cellOutlineWidth: 1px;
$cellMaxWidth: 100px;
$verticalGutterWidth: 10px;
$horizontalGutterWidth: 10px;
$cellPadding: 5px;
$cellHeight: 30px;
$cellWidth: 100px;

$xAxisLabelHeight: 25px;
$xAxisTickHeight: 10px;
$yAxisOffset: $cellHeight * 2 + 2px;

$table-border-width: 1px;
$table-border-style: solid;
$table-border-color: #aaa;

$cell-border-width: $table-border-width;
$cell-border-style: dotted;
$cell-border-color: $table-border-color;

.StackDetail {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  line-height: normal;
  font-size: 0.75rem;
  user-select: none;
  border: 1px solid #aaa;

  text-align: center;

  .x-axis.label {
    height: $cellHeight;
  }

  > div {
    height: 100%;
  }

  .index-label {
    height: $cellHeight;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    position: relative;
    border: 1px solid #000;
    border-left: none;
    border-right: none;
  }

  .cell {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: $cellHeight;
    width: inherit;
    border: 1px solid #aaa;
    border-left: none;
    border-right: none;
    cursor: context-menu;

    &.hover {
      background-color: $hover-color;
    }
    &.null {
      background-color: $null-color;
      input {
        font-style: italic;
        text-transform: uppercase;
      }
    }
    &.dragged {
      filter: drop-shadow(2px 2px 2px black);
      background-color: aquamarine;
    }
    &.selected,
    &.focused {
      background-color: $selected-color;
      input {
        font-weight: bold;
      }
    }

    input {
      width: auto;
      overflow: hidden;
      background: inherit;
      border: none;
      field-sizing: content;
      white-space: nowrap;
      text-align: center;
      text-overflow: ellipsis;
      pointer-events: none;

      &:focus-visible {
        outline: none;
      }
    }
  }

  .left-panel {
    display: flex;
    padding-top: $yAxisOffset;

    > .label {
      // rotates text -90 degrees
      height: auto;
      color: #777;
      writing-mode: sideways-lr;
    }

    > .column-group {
      display: flex;
      flex-direction: column;
      justify-content: center;
      text-align: center;
      // float: right;
      // text-align: center;
    }
  }

  .right-panel {
    flex-basis: 0;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    overflow-x: auto;

    .grid-container {
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;
      overflow-x: auto;
      height: 100%;

      form {
        border-left: 1px solid #aaa;
        border-right: 1px solid #aaa;
        font-family: sans-serif;

        &:first-child .ColumnView > .screen {
          border-left-style: $table-border-style;
          border-left-width: $cell-border-width;
          border-left-color: $cell-border-color;
        }

        &:last-child .ColumnView > .screen {
          border-right-style: $table-border-style;
        }

        label {
          height: $xAxisTickHeight;
          line-height: $xAxisTickHeight;
        }

        input,
        label {
          color: $enabledCellColor;
          font-weight: $enabledCellFontWeight;
        }

        .ColumnView {
          &.drag {
            position: fixed;
            // left: set inline dynamically
            // top: set inline dynamically
            filter: drop-shadow(2px 2px 2px black);
          }
          &.dragged {
            background-color: aquamarine;
          }

          &.ghost {
            opacity: 0.75;
          }

          &.selected {
            background-color: $selected-color;
            cursor: grab;
          }
        }

        &.hover .screen input {
          background-color: $hover-color;
        }
      }
    }
  }
}

